--- a/Chat/views/index.jade
+++ b/Chat/views/index.jade
@@ -5,7 +5,7 @@ append scripts
   script(type='text/javascript', src='/javascripts/clientchat.js')
 
 append styles
-  style(type='text/css')
+  style(type='text/css').
     #chatbox {
       width: 500px;
       height: 300px;
